// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar a11yTitle renders 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
}

<div
  class="c0"
>
  <div
    aria-label="testing for a11ytitle"
    class="c1 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
</div>
`;

exports[`Avatar icon renders 1`] = `
.c2 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #FD6FFF;
  stroke: #FD6FFF;
}

.c2 g {
  fill: inherit;
  stroke: inherit;
}

.c2 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c2 *[stroke*='#'],
.c2 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c2 *[fill-rule],
.c2 *[FILL-RULE],
.c2 *[fill*='#'],
.c2 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #FFCA58;
  color: #444444;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1 StyledAvatar-sc-1suyamb-1"
  >
    <svg
      aria-label="Favorite"
      class="c2"
      viewBox="0 0 24 24"
    >
      <path
        d="M1 8.4C1 4 4.5 3 6.5 3 9 3 11 5 12 6.5 13 5 15 3 17.5 3c2 0 5.5 1 5.5 5.4C23 15 12 21 12 21S1 15 1 8.4z"
        fill="none"
        stroke="#000"
        stroke-width="2"
      />
    </svg>
  </div>
</div>
`;

exports[`Avatar renders 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

<div
  class="c0"
>
  <div
    class="c1 StyledAvatar-sc-1suyamb-1"
  />
  <div
    class="c1 StyledAvatar-sc-1suyamb-1"
    id="test id"
  />
</div>
`;

exports[`Avatar renders outside grommet wrapper 1`] = `
.c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

<div
  class="c0 StyledAvatar-sc-1suyamb-1"
/>
`;

exports[`Avatar round renders 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  overflow: hidden;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 6px;
  overflow: hidden;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 12px;
  overflow: hidden;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 24px;
  overflow: hidden;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 48px;
  overflow: hidden;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-radius: 3px;
  }
}

@media only screen and (max-width: 768px) {
  .c4 {
    border-radius: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border-radius: 12px;
  }
}

@media only screen and (max-width: 768px) {
  .c6 {
    border-radius: 24px;
  }
}

<div
  class="c0"
>
  <div
    class="c1 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c3 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c4 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c5 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c6 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c7 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
</div>
`;

exports[`Avatar size 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 18px;
  width: 18px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 72px;
  width: 72px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 96px;
  width: 96px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 120px;
  width: 120px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 144px;
  width: 144px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 168px;
  width: 168px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 192px;
  width: 192px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c11 {
  align-self: center;
  font-size: 18px;
  line-height: 24px;
}

.c12 {
  align-self: center;
  font-size: 22px;
  line-height: 28px;
}

.c13 {
  align-self: center;
  font-size: 26px;
  line-height: 32px;
}

.c14 {
  align-self: center;
  font-size: 34px;
  line-height: 40px;
}

.c15 {
  align-self: center;
  font-size: 42px;
  line-height: 48px;
}

.c16 {
  align-self: center;
  font-size: 54px;
  line-height: 60px;
}

.c17 {
  align-self: center;
  font-size: 70px;
  line-height: 76px;
}

.c18 {
  align-self: center;
  font-size: 90px;
  line-height: 96px;
}

.c2 {
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
}

<div
  class="c0"
>
  <div
    class="c1 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c3 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c4 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c5 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c6 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c7 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c8 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c9 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c10 StyledAvatar-sc-1suyamb-1"
    role="figure"
  >
    <img
      class="c2"
      role="presentation"
      src=""
    />
  </div>
  <div
    class="c3 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c11 "
    >
      S
    </span>
  </div>
  <div
    class="c4 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c12 "
    >
      S
    </span>
  </div>
  <div
    class="c5 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c13 "
    >
      S
    </span>
  </div>
  <div
    class="c6 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c14 "
    >
      S
    </span>
  </div>
  <div
    class="c7 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c15 "
    >
      S
    </span>
  </div>
  <div
    class="c8 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c16 "
    >
      S
    </span>
  </div>
  <div
    class="c9 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c17 "
    >
      S
    </span>
  </div>
  <div
    class="c10 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c18 "
    >
      S
    </span>
  </div>
</div>
`;

exports[`Avatar stack renders 1`] = `
.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 18px;
  width: 18px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 3px;
}

.c9 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 42px;
  width: 42px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c8 {
  position: absolute;
  bottom: 0;
  right: 0;
}

.c6 {
  flex: 1 1;
  overflow: hidden;
  object-fit: contain;
}

@media only screen and (max-width: 768px) {
  .c7 {
    padding: 2px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5 StyledAvatar-sc-1suyamb-1"
            role="figure"
          >
            <img
              class="c6"
              role="presentation"
              src=""
            />
          </div>
          <div
            class="c7"
          />
        </div>
        <div
          class="c7"
        />
      </div>
    </div>
    <div
      class="c8"
    >
      <div
        class="c9 StyledAvatar-sc-1suyamb-1"
        role="figure"
      >
        <img
          class="c6"
          role="presentation"
          src=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Avatar text renders 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #555555;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  background-color: #7D4CDB;
  color: #f8f8f8;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c2 {
  align-self: center;
  font-size: 26px;
  line-height: 32px;
}

<div
  class="c0"
>
  <div
    class="c1 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c2"
    >
      R
    </span>
  </div>
  <div
    class="c3 StyledAvatar-sc-1suyamb-1"
  >
    <span
      class="c2"
    >
      SY
    </span>
  </div>
</div>
`;

exports[`Avatar text size changes according to theme 1`] = `
.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 48px;
  width: 48px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 72px;
  width: 72px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 50px;
  width: 50px;
  justify-content: center;
  border-radius: 100%;
  overflow: hidden;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  align-self: center;
  font-size: 22px;
  line-height: 28px;
}

.c5 {
  align-self: center;
  font-size: 30px;
  line-height: normal;
}

.c7 {
  align-self: center;
  font-size: 14px;
  line-height: 20px;
}

.c9 {
  align-self: center;
  font-size: 10px;
  line-height: normal;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2 StyledAvatar-sc-1suyamb-1"
    >
      <span
        class="c3 "
      >
        T1
      </span>
    </div>
    <div
      class="c4 StyledAvatar-sc-1suyamb-1"
    >
      <span
        class="c5 "
      >
        T2
      </span>
    </div>
    <div
      class="c6 StyledAvatar-sc-1suyamb-1"
    >
      <span
        class="c7 "
      >
        T3
      </span>
    </div>
    <div
      class="c8 StyledAvatar-sc-1suyamb-1"
    >
      <span
        class="c9 "
      >
        T4
      </span>
    </div>
  </div>
</div>
`;
